tests/error/right_mutable.gw
#! [contains] right-side operand is non-mutable
2 :=> 1;
